# treble-py

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  index.md
python/treble_py/: __init__.py  _classes.py  rustic_py.pyi
scripts/: test_graph.py
src/: lib.rs  render.rs  spec.rs
src/registry/: filter.rs  frequency.rs  source.rs
