[package]
name = "treble-py"
version = "0.2.1"
edition = "2024"

[lib]
name = "treble_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py39"] }
treble = { git = "https://github.com/MinIndustry/treble-core.git", tag = "0.2.0", default-features = false }
treble-meta = { git = "https://github.com/MinIndustry/treble-meta.git", tag = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
